--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "knex": "^0.14.0",
-    "npm-run-all": "4.1.2"
+    "npm-run-all": "4.1.2",
+    "objection": "^0.9.0"
   },
   "devDependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "fs-extra": "^4.0.2",
+    "knex": "^0.13.0",
     "mysql": "^2.15.0",
     "nodemon": "1.12.1"
   }
