--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "npm-run-all": "4.1.2",
-    "objection": "^0.9.0"
+    "objection": "^0.9.2"
   },
   "devDependencies": {
     "ejs": "^2.5.7",
